<resources>
    <string name="app_name">NotifyMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_under_headline">The Best to Remember</string>
    <string name="headline_settings"> Einstellungen</string>
    <string name="headline_solved"> Erledigte Aufgaben</string>
    <string name="headline_add">Neuer Eintrag</string>
    <string name="title_hint">Titel</string>
    <string name="description_hint">Kurzbeschreibung</string>
    <string name="add">Hinzufügen</string>
    <string name="notification">Erinnerung</string>
    <string name="date_picker_text">Datum</string>
    <string name="time_picker_text">Zeit</string>
    <string name="priority_title">Priorität</string>
    <string name="headline_time_date_input">Wann endet das Ereignis oder wann findet es statt?</string>
    <string name="title_add_Activity">Neuer Eintrag</string>

    <string-array name="reminder_array">
        <item>keine</item>
        <item>zum Ereigniszeitpunkt</item>
        <item>10 Minuten vorher</item>
        <item>15 Minuten vorher</item>
        <item>30 Minuten vorher</item>
        <item>1 Stunde vorher</item>
        <item>2 Stunden vorher</item>
        <item>1 Tag vorher</item>
        <item>2 Tage vorher</item>
        <item>1 Woche vorher</item>
    </string-array>

    <string-array name="priority_array">
        <item>Höchste Priorität</item>
        <item>Sehr Dringend</item>
        <item>Dringend</item>
        <item>Nicht so dringend</item>
        <item>Bei Gelegenheit</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>




    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Allgemein</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Benachrichtigungen</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="layout_pref_title">Layout-Style Midnight</string>
    <string name="dark_layout_descr">Schafft ein dunkleres Gesamt-Layout der App für die Benutzung in der Nacht</string>
    <string name="notification_pref_title">Erinnerung für die Notizen</string>

</resources>